@@ -1,5 +1,7 @@
 Changes to Version 2.0-19
 
+    o fixed axis labelling probelm in influenceIndexPlot
+
     o fixed scoping problems in Boot, bootCase, and ncvTest
 
     o added an argument to deltaMethod for passing arguments to get scoping right when calling linearHypothesis in another function; other deltaMethod bugs fixed
